// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldGender renders errors when not valid 1`] = `
<TextField>
  <StyledLabel
    htmlFor="ChildInformation_Gender"
  >
    Gender
    <span
      style={
        Object {
          "color": "red",
        }
      }
    >
      *
    </span>
  </StyledLabel>
  <StyledSelect
    id="ChildInformation_Gender"
    name="gender"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    style={
      Object {
        "border": "1px solid #CB3232",
        "boxShadow": "0px 0px 0px 2px rgba(234,16,16,0.2)",
      }
    }
    value=""
  >
    <StyledMenuItem
      value="Male"
    >
      Male
    </StyledMenuItem>
    <StyledMenuItem
      value="Female"
    >
      Female
    </StyledMenuItem>
    <StyledMenuItem
      value="Other"
    >
      Other
    </StyledMenuItem>
    <StyledMenuItem
      value="Unknown"
    >
      Unknown
    </StyledMenuItem>
  </StyledSelect>
  <ErrorText>
    This field is required
  </ErrorText>
</TextField>
`;

exports[`FieldGender renders initially 1`] = `
<TextField>
  <StyledLabel
    htmlFor="ChildInformation_Gender"
  >
    Gender
    <span
      style={
        Object {
          "color": "red",
        }
      }
    >
      *
    </span>
  </StyledLabel>
  <StyledSelect
    id="ChildInformation_Gender"
    name="gender"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    value=""
  >
    <StyledMenuItem
      value="Male"
    >
      Male
    </StyledMenuItem>
    <StyledMenuItem
      value="Female"
    >
      Female
    </StyledMenuItem>
    <StyledMenuItem
      value="Other"
    >
      Other
    </StyledMenuItem>
    <StyledMenuItem
      value="Unknown"
    >
      Unknown
    </StyledMenuItem>
  </StyledSelect>
  
</TextField>
`;

exports[`FieldGender renders when valid 1`] = `
<TextField>
  <StyledLabel
    htmlFor="ChildInformation_Gender"
  >
    Gender
    <span
      style={
        Object {
          "color": "red",
        }
      }
    >
      *
    </span>
  </StyledLabel>
  <StyledSelect
    id="ChildInformation_Gender"
    name="gender"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    value="Female"
  >
    <StyledMenuItem
      value="Male"
    >
      Male
    </StyledMenuItem>
    <StyledMenuItem
      value="Female"
    >
      Female
    </StyledMenuItem>
    <StyledMenuItem
      value="Other"
    >
      Other
    </StyledMenuItem>
    <StyledMenuItem
      value="Unknown"
    >
      Unknown
    </StyledMenuItem>
  </StyledSelect>
  
</TextField>
`;
